option java_outer_classname = "LCDelayOvertimeParkingInArea";
option java_package = "com.navinfo.opentsp.platform.location.protocol.dataaccess.common";

message DelayOvertimeParkingInArea {
	required	int32	delayTime =1;
}